Fixed some minor issues on mobile

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
 .tarefa {
     background-color: #eeeeee;
     border-radius: 8px;
-    box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, .1);
+    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, .1);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -114,7 +114,7 @@ body {
 }
 
 .tarefa:hover {
-    box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, .16);
+    box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, .1);
     top: -4px;
 }
 
